@startuml

title __AUDIOOUTPUTS's Class Diagram__\n

  package sample {
    package sample.audioOutputs {
      abstract class AudioOutput {
          + name : String
          # price : double
          # power : double
          # weight : double
          {static} + sortByName()
          {static} + sortByPrice()
          {static} + maxPrice()
          {static} + minPrice()
          + toString()
          + getPrice()
          {abstract} + setPrice()
          + getPower()
          {abstract} + setPower()
          + getWeight()
          {abstract} + setWeight()
      }
    }
  }
  

  package sample {
    package sample.audioOutputs {
      class Headphones {
          - length : double
          - minFrequency : double
          - maxFrequency : double
          + garniture : boolean
          + toString()
          + getMaxFrequency()
          + setMaxFrequency()
          + getMinFrequency()
          + setMinFrequency()
          + setLength()
          + getLength()
          + setPower()
          + setPrice()
          + setWeight()
      }
    }
  }
  

  package sample {
    package sample.audioOutputs {
      class HiFiSystem {
          + devices : ArrayList<AudioOutput>
          + CustomerName : String
          + save()
          + load()
      }
    }
  }
  

  package sample {
    package sample.audioOutputs {
      class Radio {
          + AM : boolean
          + FM : boolean
          + CD : boolean
          + USB : boolean
          + toString()
          + setPower()
          + setPrice()
          + setWeight()
      }
    }
  }
  

  package sample {
    package sample.audioOutputs {
      class Speakers {
          - minFrequency : double
          - maxFrequency : double
          + portable : boolean
          + toString()
          + getMaxFrequency()
          + setMaxFrequency()
          + getMinFrequency()
          + setMinFrequency()
          + setPower()
          + setPrice()
          + setWeight()
      }
    }
  }
  

  AudioOutput -up-|> Serializable
  Headphones -up-|> AudioOutput
  HiFiSystem -up-|> Serializable
  Radio -up-|> AudioOutput
  Speakers -up-|> AudioOutput


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
